# valhalla-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  README.md  build.rs
examples/: route.rs
include/: valhalla.h
src/: actor_wrapper.cc  actor_wrapper.h  config.rs  data.rs  lib.rs  proto.rs  route.rs  route_inputs.rs  valhalla.cc
tests/: protobuf_test.rs  valhalla.json
tests/valhalla_tiles/0/003/: 198.gph
tests/valhalla_tiles/2/000/820/: 132.gph  135.gph
