[package]
name = "valhalla"
version = "3.1.3+rs.1"
authors = [
    "Oleksandr Solovyov <alex.solovyov@gmail.com>",
    "Elias Wilken <elias@wlkn.io>",
    "Philipp Scheff <philippscheff@me.com>",
    "David Weigang <40901554+weigangd@users.noreply.github.com>",
]
edition = "2018"
description = "Rust wrapper around the Valhalla routing engine"
readme = "README.md"
repository = "https://github.com/ewilken/valhalla-rs"
license = "MIT/Apache-2.0"
keywords = ["Valhalla", "OpenStreetMap", "routing"]

[dependencies]
anyhow = "1.0"
autocxx = { git = "https://github.com/google/autocxx.git", version = "0.15" }
cc = "1.0"
cxx = "1.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
prost = "0.9"

async-graphql = { version = "3.0", optional = true }

[build-dependencies]
anyhow = "1.0"
autocxx-build = { git = "https://github.com/google/autocxx.git", version = "0.15" }
cc = "1.0"
cmake = "0.1"
cxx-build = "1.0"
prost-build = "0.9"

[features]
default = []
async-graphql-annotation = ["async-graphql"]
